Fix bug ui where swipeButton overlapping with tinderCards

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -12,5 +12,5 @@
 }
 
 .headerIcon {
-    padding: 20px;
+    padding: 10px;
 }
